# mono_lidar_depth

./: README.md
matches_conversion_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
matches_conversion_ros_tool/cfg/: AddOutlierFlag.rosif  MarkDepthOutlier.rosif  SemanticLabels.rosif
matches_conversion_ros_tool/launch/: add_outlier_flag_node.launch  add_outlier_flag_nodelet.launch  mark_depth_outlier_node.launch  mark_depth_outlier_nodelet.launch  semantic_labels_node.launch  semantic_labels_nodelet.launch
matches_conversion_ros_tool/launch/params/: add_outlier_flag_parameters.yaml  mark_depth_outlier_parameters.yaml  semantic_labels_parameters.yaml
matches_conversion_ros_tool/src/add_outlier_flag/: add_outlier_flag.cpp  add_outlier_flag.hpp  add_outlier_flag_node.cpp  add_outlier_flag_nodelet.cpp
matches_conversion_ros_tool/src/mark_depth_outlier/: mark_depth_outlier.cpp  mark_depth_outlier.hpp  mark_depth_outlier_node.cpp  mark_depth_outlier_nodelet.cpp
matches_conversion_ros_tool/src/semantic_labels/: semantic_labels.cpp  semantic_labels.hpp  semantic_labels_node.cpp  semantic_labels_nodelet.cpp
matches_conversion_ros_tool/test/: add_outlier_flag_node.cpp  add_outlier_flag_node.test  add_outlier_flag_nodelet.cpp  add_outlier_flag_nodelet.test  mark_depth_outlier_node.cpp  mark_depth_outlier_node.test  mark_depth_outlier_nodelet.cpp  mark_depth_outlier_nodelet.test  semantic_labels_node.cpp  semantic_labels_node.test  semantic_labels_nodelet.cpp  semantic_labels_nodelet.test
matches_msg_conversions_ros/: CMakeLists.txt  package.xml
matches_msg_conversions_ros/include/matches_msg_conversions_ros/: convert.hpp
matches_msg_depth_ros/: CMakeLists.txt  README.md  package.xml
matches_msg_depth_ros/msg/: FeaturePoint.msg  MatchesMsg.msg  MatchesMsgWithInlierFlag.msg  MatchesMsgWithOutlierFlag.msg  Tracklet.msg  TrackletWithInlierFlag.msg  TrackletWithOutlierFlag.msg
matches_msg_depth_ros/test/: test_matches_msg_depth_ros.cpp
mono_lidar_depth/: CMakeLists.txt  package.xml
monolidar_fusion/: CMakeLists.txt  README.md  package.xml  parameters.yaml
monolidar_fusion/Logs/: log_depth_calc_stats.txt  log_depths.txt
monolidar_fusion/include/monolidar_fusion/: DepthCalcStatsSinglePoint.h  DepthCalculationStatistics.h  DepthEstimator.h  DepthEstimatorParameters.h  ErrorPlane.h  HistogramPointDepth.h  LinePlaneIntersectionBase.h  LinePlaneIntersectionCeckXZTreshold.h  LinePlaneIntersectionNormal.h  LinePlaneIntersectionOrthogonalTreshold.h  NNParams.h  NeighborFinderBase.h  NeighborFinderPixel.h  PCA.h  PlaneEstimationCalcMaxSpanningTriangle.h  PlaneEstimationLeastSquares.h  PlaneEstimationMEstimator.h  PointData.h  PointcloudData.h  RansacBase.h  RansacPlane.h  RansacPlaneModel.h  RoadDepthEstimatorBase.h  RoadDepthEstimatorLeastSquares.h  RoadDepthEstimatorMEstimator.h  RoadDepthEstimatorMaxSpanningTriangle.h  TresholdDepthLocal.h  camera_pinhole.h  eigen_stl_defs.h
monolidar_fusion/src/: DepthCalculationStatistics.cpp  DepthEstimator.cpp  DepthEstimatorParameters.cpp  GeometryHelper.cpp  HelperLidarRowSegmentation.cpp  Histogram.cpp  HistogramPointDepth.cpp  LinePlaneIntersectionBase.cpp  LinePlaneIntersectionCeckXZTreshold.cpp  LinePlaneIntersectionNormal.cpp  LinePlaneIntersectionOrthogonalTreshold.cpp  Logger.cpp  NeighborFinderBase.cpp  NeighborFinderPixel.cpp  PCA.cpp  PlaneEstimationCalcMaxSpanningTriangle.cpp  PlaneEstimationCheckPlanar.cpp  PlaneEstimationLeastSquares.cpp  PlaneEstimationMEstimator.cpp  RansacPlane.cpp  RoadDepthEstimatorBase.cpp  RoadDepthEstimatorLeastSquares.cpp  RoadDepthEstimatorMEstimator.cpp  RoadDepthEstimatorMaxSpanningTriangle.cpp  TresholdDepthGlobal.cpp  TresholdDepthLocal.cpp
monolidar_fusion/test/: test_imglidar.cpp  test_monolidar_fusion.cpp
tracklets_depth/: CMakeLists.txt  package.xml
tracklets_depth/include/tracklets_depth/: TempTrackletFrame.h  parameters.h  tracket_depth_module.h  tracklet_depth_module.h
tracklets_depth/src/: parameters.cpp  tracket_depth_module.cpp  tracklet_depth_module.cpp
tracklets_depth_ros_tool/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
tracklets_depth_ros_tool/launch/: tracklets.launch
tracklets_depth_ros_tool/launch/params/: parameters_ros_tool.yaml
tracklets_depth_ros_tool/src/tracklet_depth_node/: TempTrackletFrame.h  parameters.cpp  parameters.h  tracklet_depth.cpp  tracklet_depth.h  tracklet_depth_interface.cpp  tracklet_depth_interface.h  tracklet_depth_node.cpp  tracklet_depth_nodelet.cpp
tracklets_depth_ros_tool/test/: test_tracklets_depth_ros_tool.cpp  test_tracklets_depth_ros_tool.test
