<?xml version="1.0"?>
<package format="2">
  <name>matches_msg_conversions_ros</name>
  <version>0.0.0</version>
  <description>Interface between rmatches msg from ros and common types.</description>

  <license>GPLv3</license>
  <maintainer email="johannes.graeter@gmail.com">Johannes Graeter</maintainer>
  <author email="johannes.graeter@gmail.com">Johannes Graeter</author>
  <url type="repository">http://github.com/johannes-graeter/limo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rospy</build_depend> Use this instead of roscpp  when writing a python node -->
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>opencv</depend>
  <depend>matches_msg_ros</depend>
  <depend>matches_msg_depth_ros</depend>
  <depend>matches_msg_types</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
